--- a/G0PyRCD/index.html
+++ b/G0PyRCD/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://release-assets.githubusercontent.com/github-production-release-asset/97159243/d9cc8a42-7209-11e7-86ed-f37b9a9564cf?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-07-16T08%3A25%3A57Z&rscd=attachment%3B+filename%3Dantipetya_ultimate.iso&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-07-16T07%3A25%3A51Z&ske=2025-07-16T08%3A25%3A57Z&sks=b&skv=2018-11-09&sig=UYGyJ%2FJs5PXFJQHA5IPomcx%2FAWcrmm8pRBOJuSw%2FlCU%3D&jwt=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc1MjY1MjIzNiwibmJmIjoxNzUyNjUxOTM2LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.UOAu53lWloQyFmm1Hm730DpdfnXKKxGS1uYKCNnLW0Q&response-content-disposition=attachment%3B%20filename%3Dantipetya_ultimate.iso&response-content-type=application%2Foctet-stream" />
+    <meta http-equiv="refresh" content="0; url=https://github.com/hasherezade/petya_key/releases/download/0.2/antipetya_ultimate.iso" />
   </head>
   <body>
   </body>
