--- a/G0PyRCD/index.html
+++ b/G0PyRCD/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://drive.usercontent.google.com/download?id=1PH0YA-bYJXmGbuAl1Tcaqn2FvmGYX8cT&export=download&authuser=0&confirm=t&uuid=b9502c49-f966-46bf-a9ce-cc59ffeb191a&at=AN8xHopt4WLVWPY5A7nsKhO-qUku:1752658278794" />
+    <meta http-equiv="refresh" content="0; url=https://archive.org/download/antipetya_ultimate/antipetya_ultimate.iso" />
   </head>
   <body>
   </body>
